--- a/src/main/webapp/lib/css/main.css
+++ b/src/main/webapp/lib/css/main.css
@@ -1,5 +1,186 @@
 @CHARSET "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,600");
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 
+*, *:before, *:after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+html, body {
+	height: 100vh;
+}
+
+body {
+	font: 600 12px/1 'Open Sans', sans-serif;
+	color: #333;
+	background: #333;
+	overflow-x: hidden;
+}
+
+.wrapper {
+	display: flex;
+	min-height: 100%;
+}
+
+.sidebar {
+	position: absolute;
+	width: 12%;
+}
+
+.content {
+/* 	flex: 1; */
+	padding: 30px;
+	background: #eee;
+	box-shadow: 0 0 5px black;
+	transform: translate3d(0, 0, 0);
+	transition: transform .3s;
+	width: 89%;
+}
+
+.content.isOpen {
+	transform: translate3d(220px, 0, 0);
+}
+
+.button {
+	cursor: pointer;
+}
+
+.button:before {
+	content: '\f0c9';
+	font: 42px fontawesome;
+}
+
+/* Demo Navigation */
+.title {
+	font-size: 16px;
+	line-height: 50px;
+	text-align: center;
+	text-transform: uppercase;
+	letter-spacing: 7px;
+	color: #eee;
+	border-bottom: 1px solid #222;
+	background: #2a2a2a;
+}
+
+.nav li a {
+	position: relative;
+	display: block;
+	padding: 20px 0 20px 50px;
+	font-size: 12px;
+	color: #eee;
+	border-bottom: 1px solid #222;
+	cursor: pointer;
+}
+
+.nav li a:before {
+	font: 14px fontawesome;
+	position: absolute;
+	top: 19px;
+	left: 20px;
+}
+
+.nav li:nth-child(1) a:before {
+	content: '\f00a';
+}
+
+.nav li:nth-child(2) a:before {
+	content: '\f012';
+}
+
+.nav li:nth-child(3) a:before {
+	content: '\f0e8';
+}
+
+.nav li:nth-child(4) a:before {
+	content: '\f0c3';
+}
+
+.nav li:nth-child(5) a:before {
+	content: '\f022';
+}
+
+.nav li:nth-child(6) a:before {
+	content: '\f115';
+}
+
+.nav li:nth-child(7) a:before {
+	content: '\f085';
+}
+
+.nav li:nth-child(8) a:before {
+	content: '\f023';
+	left: 23px;
+}
+
+.nav li:nth-child(9) a:before {
+	content: '\f023';
+	left: 23px;
+}
+
+.nav li a:hover {
+	background: #444;
+}
+
+.nav li a.active {
+	box-shadow: inset 5px 0 0 #5b5, inset 6px 0 0 #222;
+	background: #444;
+}
+
+/* Demo Description */
+h1 {
+	margin: 25px 0 15px;
+	font-size: 28px;
+	font-weight: 400;
+}
+
+h2 {
+	font-size: 18px;
+	font-weight: 400;
+	color: #999;
+}
+
+.logo-name {
+/* 	color: #e6e6e6; */
+	color: darkgray;
+	font-size: 180px;
+	font-weight: 800;
+	letter-spacing: -10px;
+	margin-bottom: 0px;
+}
+
+.notice_content {
+	display: none;
+	margin-left: 30px;
+	background: #444;
+	z-index: 1;
+	position: absolute;
+	left: 190px;
+	width: 200px;
+	top: 0px;
+}
+
+.issue_content {
+	display: none;
+	margin-left: 30px;
+	background: #444;
+	z-index: 1;
+	position: absolute;
+	left: 190px;
+	width: 200px;
+	top: 0px;
+}
+
+.content .table_area {
+	width: 100%;
+    margin: 50px 150px;
+}
+
+.content #container {
+	width: 100%;
+    margin: 50px 150px;
+}
 .sptTable {
   width: 40%;
   background-color: #E6E6E6;
