--- a/src/main/webapp/lib/css/board/board_reg.css
+++ b/src/main/webapp/lib/css/board/board_reg.css
@@ -1,8 +1,8 @@
 @CHARSET "UTF-8";
 
 #teamNoticeBoard {
-  margin-left: 30%;
-  width: 800px;
+  width: 70%;
+  margin: 30px auto;
   background-color: #E6E6E6;
   border: 1px solid white;
   border-collapse: collapse;
