--- a/src/main/webapp/lib/css/board/notice_board.css
+++ b/src/main/webapp/lib/css/board/notice_board.css
@@ -37,3 +37,13 @@
 	width: 70%;
 	margin: 0 auto;
 }
+
+/* page 영역 */
+.paging .hide {display:block; height: 0; width: 0; font-size: 0; line-height: 0; margin: 0; padding: 0; overflow:hidden;}
+.paging{padding:19px; text-align:center;}
+.paging a{display:inline-block; width:23px; height:23px; padding-top:5px; vertical-align:middle;}
+.paging a:hover{text-decoration:underline;}
+.paging .btn_arr{text-decoration:none;}
+.paging .btn_arr, .paging .on{margin:0 3px; padding-top:0; border:1px solid #ddd; border-radius:30px; /* background:url(/front/img/com/btn_paging.png) no-repeat; */}
+.paging .on{padding-top:5px; height:22px; color:#fff; font-weight:bold; background:#000;}
+.paging .on:hover{text-decoration:none;}
