--- a/src/main/webapp/lib/css/main.css
+++ b/src/main/webapp/lib/css/main.css
@@ -22,11 +22,12 @@ body {
 .wrapper {
 	display: flex;
 	min-height: 100%;
+	height: 100%;
 }
 
 .sidebar {
 	position: absolute;
-	width: 12%;
+	width: 220px;
 }
 
 .content {
@@ -82,11 +83,11 @@ body {
 }
 
 .nav li:nth-child(1) a:before {
-	content: '\f00a';
+	content: '\f022';
 }
 
 .nav li:nth-child(2) a:before {
-	content: '\f012';
+	content: '\f06a';
 }
 
 .nav li:nth-child(3) a:before {
@@ -94,29 +95,73 @@ body {
 }
 
 .nav li:nth-child(4) a:before {
-	content: '\f0c3';
+	content: '\f16c';
 }
 
 .nav li:nth-child(5) a:before {
-	content: '\f022';
+	content: '\f02d';
 }
 
 .nav li:nth-child(6) a:before {
-	content: '\f115';
+	content: '\f23e';
 }
 
 .nav li:nth-child(7) a:before {
-	content: '\f085';
+	content: '\f1ae';
 }
 
 .nav li:nth-child(8) a:before {
+	content: '\f108';
+}
+
+.nav li:nth-child(9) a:before {
+	content: '\f26b';
+	left: 23px;
+}
+
+.nav li:nth-child(10) a:before {
 	content: '\f023';
 	left: 23px;
 }
 
-.nav li:nth-child(9) a:before {
-	content: '\f023';
-	left: 23px;
+.nav li .notice_content li:nth-child(1) a:before {
+	content: '\f0f6';
+}
+
+.nav li .notice_content li:nth-child(2) a:before {
+	content: '\f0f6';
+}
+
+.nav li .issue_content li:nth-child(1) a:before {
+	content: '\f001';
+}
+
+.nav li .issue_content li:nth-child(2) a:before {
+	content: '\f028';
+}
+
+.nav li .issue_content li:nth-child(3) a:before {
+	content: '\f10a';
+}
+
+.nav li .issue_content li:nth-child(4) a:before {
+	content: '\f10b';
+}
+
+.nav li .issue_content li:nth-child(5) a:before {
+	content: '\f04b';
+}
+
+.nav li .issue_content li:nth-child(6) a:before {
+	content: '\f03d';
+}
+
+.nav li .issue_content li:nth-child(7) a:before {
+	content: '\f09e';
+}
+
+.nav li .issue_content li:nth-child(8) a:before {
+	content: '\f26c';
 }
 
 .nav li a:hover {
