--- a/src/main/webapp/lib/css/board/board_reg.css
+++ b/src/main/webapp/lib/css/board/board_reg.css
@@ -2,7 +2,7 @@
 
 #teamNoticeBoard {
   width: 70%;
-  margin: 30px auto;
+  margin: 10px auto;
   background-color: #E6E6E6;
   border: 1px solid white;
   border-collapse: collapse;
@@ -21,4 +21,11 @@
 }
 .btn_area .btn {
   float: right;
+}
+
+.required_wrap {
+	margin-top: 20px;
+	margin-left: 15%;
+	font-size: 15px;
+	color: red;
 }
