--- a/src/main/webapp/lib/css/main.css
+++ b/src/main/webapp/lib/css/main.css
@@ -30,6 +30,7 @@ body {
 	width: 220px;
 	height: 100%;
 	background: #333;
+	z-index: 99;
 }
 
 .content {
@@ -215,7 +216,7 @@ h2 {
 	background: #444;
 	z-index: 1;
 	position: absolute;
-	left: 90px;
+	left: 190px;
 	width: 200px;
 	top: 0px;
 }
