[Write Page] 수정, 삭제 기능 추가 및 게시판 리스트에 카테고리 텍스트 노출

--- a/src/main/webapp/lib/css/board/board_reg.css
+++ b/src/main/webapp/lib/css/board/board_reg.css
@@ -19,13 +19,14 @@
   background-color: #A0C0D7;
   color: white;
 }
-.btn_area .btn {
-  float: right;
-}
 
 .required_wrap {
 	margin-top: 20px;
 	margin-left: 15%;
 	font-size: 15px;
 	color: red;
+}
+
+.btn_area .modify_btn {
+	display: none;
 }
