[Mypage] 비밀번호 영역 css 수정

--- a/src/main/webapp/lib/css/user/mypage.css
+++ b/src/main/webapp/lib/css/user/mypage.css
@@ -32,12 +32,12 @@
   text-align: center;
 }
 .info_table tr td #user_password {
-	width: 79%;
-	display: inherit;
+	width: 83%;
+	display: inline-block;
 }
 
 .info_table tr td .modify_pw {
-	
+	margin-left: 10px;
 }
 .info_table .hqttd2 {
 	padding: 10px 20px;
