--- a/src/main/webapp/lib/css/main.css
+++ b/src/main/webapp/lib/css/main.css
@@ -203,7 +203,7 @@ h2 {
 	margin-bottom: 0px;
 }
 
-.notice_content, .issue_content, .etc_content {
+.notice_content, .issue_content, .etc_content, .admin_content{
 	display: none;
 	margin-left: 30px;
 	background: #444;
