--- a/src/main/webapp/lib/css/new_main.css
+++ b/src/main/webapp/lib/css/new_main.css
@@ -48,21 +48,21 @@
 .user-head .inbox-avatar img {
     border-radius: 4px;
 }
-.user-head .user-name {
+.user-head .user-info {
     display: inline-block;
     margin: 0 0 0 10px;
 }
-.user-head .user-name h5 {
+.user-head .user-info h5 {
 	display: inline-block;
     font-size: 24px;
     font-weight: 300;
     margin-bottom: 0;
     margin-top: 15px;
 }
-.user-head .user-name h5 a {
+.user-head .user-info h5 a {
     color: #fff;
 }
-.user-head .user-name span a {
+.user-head .user-info span a {
     color: #87e2e7;
     font-size: 12px;
 }
@@ -98,6 +98,7 @@ ul.inbox-nav {
     border-bottom: 1px solid #d5d8df;
 }
 ul.inbox-nav li {
+	position: relative;
     display: inline-block;
     line-height: 45px;
     width: 100%;
@@ -382,4 +383,14 @@ ul {
  
 .notice_content li a {
 	padding-left: 50px;
+}
+
+.notice_content, .issue_content, .etc_content, .admin_content{
+	display: none;
+	background: #e5e8ef;
+	z-index: 1;
+	position: absolute;
+	left: 282px;
+	width: 200px;
+	top: 0px;
 }
