--- a/src/main/webapp/lib/css/new_main.css
+++ b/src/main/webapp/lib/css/new_main.css
@@ -222,13 +222,15 @@ ul.inbox-pagination li {
     display: inline-block;
     padding: 5px 10px;
 }
-.inbox-pagination a.np-btn {
+.inbox-pagination a.np-btn, a.np-btn {
     background: none repeat scroll 0 0 #fcfcfc;
     border: 1px solid #e7e7e7;
     border-radius: 3px !important;
     color: #afafaf;
     display: inline-block;
     padding: 5px 15px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .mail-option .chk-all input[type="checkbox"] {
     margin-top: 0;
